[workspace]
resolver = "2"
members = ["ext/*", "examples/*"]
default-members = [".", "ext/*"]


[package]
name = "flipper0-sys"
description = "Bindings for Flipper Zero fw"
version = "0.2.2"
edition = "2021"

authors = ["Alex Koz <a@koz.email>"]
documentation = "https://docs.rs/flipper0-sys"
keywords = ["api", "ffi", "bindings", "no-std", "flipper-zero"]
categories = ["api-bindings", "external-ffi-bindings", "no-std"]
homepage = "https://github.com/boozook/flipper0"
repository = "https://github.com/boozook/flipper0.git"
license = "MIT"
readme = "README.md"

build = "src/build/main.rs"

include = [
	"/src",
	"/gen",
	"/.cargo",
	"/.rustfmt.toml",
	"/rust-toolchain.toml",
	"/LICENSE",
	"!/examples/*",
]


[badges]
maintenance = { status = "actively-developed" }


[lib]
bench = false
test = false

[[example]]
name = "hello-fap"
path = "examples/hello-fap.rs"
crate-type = ["staticlib"]


[features]
default = ["allocator", "panic", "prebuild", "use-local-sdk"]
# parts:
allocator = [] # global allocator impl
panic = []     # panic handler
# build methods:
prebuild = []       # use pregenerated bindings
use-local-sdk = []  # look at `FLIPPER_REPO_PATH`, try to build from source
use-remote-sdk = [] # build from remote git repo (slow)
# build options:
derive-default = []
derive-eq = []
derive-copy = []
derive-hash = []
derive-ord = []
derive-partialeq = []
derive-partialord = []


[build-dependencies]
rustygit = "0.4"
semver = "1.0"
wax = "0.5"
csv = "1.1"

[build-dependencies.bindgen]
version = "0.60.1"
features = ["runtime", "which-rustfmt", "logging"]
default-features = true


[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true
