cargo-features = ["per-package-target"]

[workspace]
resolver = "2"
members = [
	"flipper",
	"format/*",
	"build/*-build",
	"build/*-macro",
	"build/common/*",
	"examples/*",
]
default-members = ["flipper", "."]


[package]
name = "flipper0-sys"
description = "Bindings for Flipper Zero fw"
version = "0.2.13"
edition = "2021"

authors = ["Alex Koz <a@koz.email>"]
documentation = "https://docs.rs/flipper0-sys"
keywords = ["api", "ffi", "bindings", "no-std", "flipper-zero"]
categories = ["api-bindings", "external-ffi-bindings", "no-std"]
homepage = "https://github.com/boozook/flipper0"
repository = "https://github.com/boozook/flipper0.git"
license = "MIT"
readme = "crates.io.md"

rust-version = "1.66"
default-target = "thumbv7em-none-eabihf"

build = "src/build/main.rs"

include = [
	"/src",
	"/gen",
	"/.cargo",
	"/.rustfmt.toml",
	"/rust-toolchain.toml",
	"/LICENSE",
	"!/examples/*",
]
exclude = [".*/*"]


[badges]
maintenance = { status = "actively-developed" }


[lib]
bench = false
test = false

[[example]]
name = "hello-fap"
path = "examples/hello-fap.rs"
crate-type = ["staticlib"]


[features]
default = [
	"allocator-global",
	"oom-global",
	"panic",
	# "prebuild",
	"use-local-sdk",
	"macro",
]
# parts:
allocator = []                   # allocator impl
allocator-global = ["allocator"] # global allocator impl
oom-global = []                  # global out-of-memory handler
panic = []                       # global panic handler
# build methods:
prebuild = []       # use pregenerated bindings
use-local-sdk = []  # look at `FLIPPER_FW_SRC_PATH`, try to build from source
use-remote-sdk = [] # build from remote git repo (slow)
# build options:
derive-default = []
derive-eq = []
derive-copy = []
derive-hash = []
derive-ord = []
derive-partialeq = []
derive-partialord = []
derive-debug = []      # derive Debug, default for debug profile
# extras:
macro = ["proc-macros", "proc-macros/export-fam-infallible"]


[dependencies.proc-macros]
package = "flipper0-macro"
version = "0.1.3"
path = "build/proc-macro"
optional = true


[build-dependencies]
rustygit = "0.4"
semver = "1.0"
wax = "0.5"
csv = "1.1"

[build-dependencies.build-cfg]
package = "flipper0-build-cfg"
version = "0.1.3"
path = "build/common/cfg"

[build-dependencies.bindgen]
version = "0.61.0"
features = ["runtime", "which-rustfmt"]
default-features = true


[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true


[profile.dev]
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1
debug = false
debug-assertions = false
