[package]
name = "flipper0"
description = "API for Flipper Zero fw"
version = "0.2.1"
edition = "2021"

authors = ["Alex Koz <a@koz.email>"]
documentation = "https://docs.rs/flipper0"
keywords = ["api", "ffi", "bindings", "no-std", "flipper-zero"]
categories = ["api-bindings", "external-ffi-bindings", "no-std"]
homepage = "https://github.com/boozook/flipper0/tree/master/flipper"
repository = "https://github.com/boozook/flipper0.git"
license = "MIT"
readme = "README.md"


[badges]
maintenance = { status = "actively-developed" }


[features]
default = ["allocator", "panic", "prebuild", "macro"]
# parts:
allocator = ["bindings/allocator"] # global allocator impl
panic = ["bindings/panic"]         # panic handler
# build methods:
prebuild = ["bindings/prebuild"]             # use pregenerated bindings
use-local-sdk = ["bindings/use-local-sdk"]   # build from `FLIPPER_REPO_PATH`
use-remote-sdk = ["bindings/use-remote-sdk"] # build from remote git repo (slow)
# extras:
macro = ["bindings/macro"]


[dependencies.bindings]
package = "flipper0-sys"
version = "0.2"
path = ".."
default-features = false
features = []


[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true
