[package]
name = "flipper0"
description = "API for Flipper Zero fw"
version = "0.3.4"
edition = "2021"

authors = ["Alex Koz <a@koz.email>"]
documentation = "https://docs.rs/flipper0"
keywords = ["api", "ffi", "bindings", "no-std", "flipper-zero"]
categories = ["api-bindings", "external-ffi-bindings", "no-std"]
homepage = "https://github.com/boozook/flipper0/tree/master/flipper"
repository = "https://github.com/boozook/flipper0.git"
license = "MIT"
readme = "README.md"


[badges]
maintenance = { status = "actively-developed" }


[features]
default = [
	"allocator-global",
	"oom-global",
	"panic",
	"prebuild",
	"use-local-sdk",
	"macro",
]
# parts:
allocator = ["sys/allocator"]               # allocator impl
allocator-global = ["sys/allocator-global"] # global allocator impl
oom-global = ["sys/oom-global"]             # global out-of-memory handler
panic = ["sys/panic"]                       # global panic handler
# build methods:
prebuild = ["sys/prebuild"]             # use pregenerated bindings
use-local-sdk = ["sys/use-local-sdk"]   # build from `FLIPPER_FW_SRC_PATH`
use-remote-sdk = ["sys/use-remote-sdk"] # build from remote git repo (slow)
# build options:
derive-default = ["sys/derive-default"]
derive-eq = ["sys/derive-eq"]
derive-copy = ["sys/derive-copy"]
derive-hash = ["sys/derive-hash"]
derive-ord = ["sys/derive-ord"]
derive-partialeq = ["sys/derive-partialeq"]
derive-partialord = ["sys/derive-partialord"]
derive-debug = ["sys/derive-debug"]           # derive Debug, default for debug profile
# extras:
macro = ["sys/macro"]


[dependencies.sys]
package = "flipper0-sys"
version = "0.2.10"
path = ".."
default-features = false
features = ["derive-debug"]


[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true
