[package]
name = "fap-build-example"
version = "0.1.0"
edition = "2021"
authors = ["Alex Koz <a@koz.email>"]
description = "Example App for Flipper Zero"
homepage = "https://github.com/boozook/flipper0/tree/master/examples/app-build"
publish = false

# important things to build manifest
build = "build.rs"


[package.metadata.fap]
main = "init"
name = "Hello, Flipper"


[lib]
path = "../hello-fap.rs"
crate-type = ["staticlib"]
bench = false
test = false


[dependencies.flipper0-sys]
version = "*"
path = "../.."
default-features = true
features = []

[build-dependencies.fap]
package = "flipper0-fap-build"
version = "*"
path = "../../build/fap-build"

# Just to get name of env-var `FLIPPER_SDK_PATH_ENV` for assertion.
# Usually unnecessary. Just for example.
[build-dependencies.cfg]
package = "flipper0-build-cfg"
version = "*"
path = "../../build/common/cfg"
