[package]
name = "hello-fap-manifest"
version = "0.1.0"
edition = "2021"
authors = ["Alex Koz <a@koz.email>"]
description = "Example FAP for Flipper Zero"
homepage = "https://github.com/boozook/flipper0/examples/hello-fap-manifest"
publish = false

# important things to build manifest
build = "build.rs"


[package.metadata.fap]
main = "init"
name = "Hello, FAP"                # optional, default is crate name
# id = "hello-fap"                 # optional, default is crate name
# type = "FlipperAppType.EXTERNAL" # optional, default is FlipperAppType.EXTERNAL
# icon = "icon_10px.png"           # optional
# category = "Misc"                # optional, default Misc


[lib]
# name = "ololo"
path = "../hello-fap.rs"
crate-type = ["staticlib"]
bench = false
test = false


[dependencies]

[dependencies.flipper0-sys]
version = "0.2"
path = "../.."
default-features = true
features = []


[build-dependencies.fam]
package = "flipper0-fam-build"
version = "*"
path = "../../build/fam-build"
