[package]
name = "flipper0"
description = "API for Flipper Zero firmware"
version = "0.1.5"
edition = "2021"

authors = ["Alex Koz <a@koz.email>"]
documentation = "https://docs.rs/flipper0"
keywords = ["api", "ffi", "bindings", "no-std", "flipper-zero"]
categories = ["api-bindings", "external-ffi-bindings", "no-std"]
homepage = "https://github.com/boozook/flipper0"
repository = "https://github.com/boozook/flipper0.git"
license = "MIT"
readme = "README.md"


[badges]
maintenance = { status = "actively-developed" }


[features]
default = ["allocator", "panic"]
prebuild = ["bindings/prebuild"]   # use pregenerated bindings
allocator = ["bindings/allocator"] # global allocator impl
panic = ["bindings/panic"]         # panic handler


[dependencies.bindings]
package = "flipper0-sys"
version = "0.1.4"
path = "../.."


[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true
